# trajectory_generation_service

./: .gitignore  cached_trajectory_data.yaml  cartesian_controller_publisher.py  csv_trajectory_lcm_publisher.py  dummy_lcm_publisher.py  dummy_lcm_subscriber.py  joint_trajectory_controller_publisher.py  knot_vector.csv  loop_vacuum_controller_publisher.py  nachi_robot_state.py  pyproject.toml  time_vector.csv  trajectory.yaml  trajectory_data.yaml  trajectory_generation.py  trajectory_generator.py  vacuum_controller_publisher.py  yaml_generation.py  yaml_trajectory_lcm_publisher.py
lcm_azalea/: CartesianVelocityControllerExecutionRequest.py  ControllerResponse.py  ControllerStatus.py  ControllerType.py  DiffIkExecutionRequest.py  EKFState.py  Header.py  JointTrajectoryControllerExecutionRequest.py  NachiControlPoints.py  NachiJointAngles.py  NachiRobotState.py  PerceptionMessage.py  Pose6d.py  RobotState.py  RobotType.py  TrajectoryPlanningRequest.py  TrajectoryPlanningResponse.py  TrajectoryState.py  TrajectoryStateType.py  TrajectoryType.py  Twist6d.py  UrControlPoints.py  UrJointAngles.py  UrRobotState.py  VacuumControllerExecutionRequest.py  __init__.py
lcm_dummies/: cartesian_controller_publisher.py  joint_trajectory_controller_publisher.py  loop_vacuum_controller_publisher.py  vacuum_controller_publisher.py
lcm_messages/: __init__.py  joint_trajectory_controller.py  lcmt_int_value.py  nachi_joint_angles.py  nachi_robot_state.py  pose.py  trajectory_request.py  trajectory_response.py
messages/: messages.lcm
visualization/: visualize_nachi_state.py
(+6 files in other folders)
